--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
     volumes:
     - ./actions:/app/actions
     - ./data:/app/data
-    command: bash -c "rm -rf models/* &&  rasa run -m models --enable-api --cors \"*\" --debug"
+    command: bash -c "rm -rf models/* && rasa train &&  rasa run -m models --enable-api --cors \"*\" --debug"
     ports:
-    - '5006:5005'
+    - '5005:5005'
     networks:
     - all
 
