--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,5 @@
 version: '3.4'
 services:
-
-  duckling-server:
-    image: rasa/duckling:latest
-    ports:
-    - 8000:8000
-    networks:
-    - all
-
   rasa-server:
     image: rasa-bot:latest
     working_dir: /app
@@ -18,7 +10,8 @@ services:
     - ./data:/app/data
     command: bash -c "rm -rf models/* && rasa train &&  rasa run -m models --enable-api --cors \"*\" --debug"
     ports:
-    - '5005:5005'
+    - '5006:5005'
+    public: true
     networks:
     - all
 
