--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
     - ./actions:/app/actions
     - ./data:/app/data
-    command: bash -c "rm -rf models/* && rasa run --enable-api --cors \"*\" "
+    command: bash -c "rasa train && rasa run --enable-api --cors \"*\" "
     ports:
     - '5006:5006'
     public: true
