--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     volumes:
     - ./actions:/app/actions
     - ./data:/app/data
-    command: bash -c "rasa run -m /app/models/20230116-003850-median-cottage.tar.gz --enable-api --cors \"*\" --port 5006 "
+    - ./models:/app/models
+    command: bash -c "rasa run -m models --enable-api --cors \"*\" --port 5006 "
     ports:
     - '5006:5006'
     public: true
